Bug 403639 - Window_newView //unable to access new view drop down menu//
Summary: Window_newView //unable to access new view drop down menu//
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.1.7
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-26 21:08 UTC by daniel
Modified: 2019-04-09 21:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
As the screen appears to me on attempting to access the new view drop down menu (1.75 MB, image/png)
2019-01-26 21:10 UTC, daniel
Details
New view in a new window as it appears in two seperate tabs. (3.55 MB, image/png)
2019-01-27 18:00 UTC, daniel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description daniel 2019-01-26 21:08:04 UTC
SUMMARY

I have a file open in which I would like to view and work on in two different windows. I have my settings enabled to allow for multi-window viewing. I access the windows drop down menu to access the new view drop down menu only to find there is no drop down menu display a list of open documents. The workspace drop down menu works fine. I have tried to reinstall krita and to attempt new views on multiple documents and to toggle in all conceivable view modes, but to no avail. Please help! :) Cheers!


STEPS TO REPRODUCE
1. Open any file with settings enabled for sub-windows 
2. Access windows from top bar 
3. Attempt to access new view 

OBSERVED RESULT

No drop down menu accessible 


EXPECTED RESULT

Drop down menu available with all open files 

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

Happy January! :)
Comment 1 daniel 2019-01-26 21:10:00 UTC
Created attachment 117666 [details]
As the screen appears to me on attempting to access the new view drop down menu
Comment 2 mvowada 2019-01-27 08:55:52 UTC
Hi daniel,
do the "tile" and "cascade" commands work?
Comment 3 daniel 2019-01-27 18:00:20 UTC
Created attachment 117690 [details]
New view in a new window as it appears in two seperate tabs.

Steps to recreate; //with one file open 
1. New window 
2. New view - whatever open file 

EXPECTED RESULT 
A new view within the original krita tab.
Both windows an views simultaneously editable. 

OBSERVED RESULT
A new view within a secondary non-merging krita tab.
Both windows an views simultaneously editable. 

ADDITIONAL COMMENTS
I'm not sure if this is relevant to my original bug report. I had seen others, in tutorial, access new view without using the new window function in order to produce a new view in one instance of krita. Me using new window as a function to access new view was a troubleshooting effort. But I'm still unsure if I am going about it correctly.
Comment 4 wolthera 2019-03-12 15:46:08 UTC
Hi, I cannot reproduce this here.

Maybe it is a mac os specific bug?
Comment 5 vanyossi 2019-04-08 15:10:27 UTC
I can reproduce it on macOs Mojave

Steps to reproduce:
Open a file in which the path/location name makes a very long string. the new window cannot popup as there is no space left or right to accomodate the submenu.
Comment 6 vanyossi 2019-04-08 19:55:54 UTC
Fixed, made a little patch for review

https://phabricator.kde.org/D20391
Comment 7 vanyossi 2019-04-09 21:01:48 UTC
Git commit 900f802f35b180fbded4ddee258acd042f4b0355 by Ivan Yossi.
Committed on 09/04/2019 at 20:19.
Pushed by ivany into branch 'master'.

Fix: Unable to select NewView item with long paths in OSX

M  +6    -3    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/900f802f35b180fbded4ddee258acd042f4b0355