Fix: Unable to select NewView item with long paths in OSX

BUG:403639